--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -10,8 +10,9 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: -1;
-        opacity: 0.3;
-        color: #808080;
+        opacity: 0.2;
+        color: #ffffff;
+        text-shadow: 3px 2px 3px black;
     }
 }
 
