--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -10,14 +10,35 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: -1;
-        opacity: 0.2;
+        opacity: 0.5;
         color: #ffffff;
         text-shadow: 3px 2px 3px black;
     }
 }
 
+.about__content{
+    min-height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+}
+
 .about__content-title{
-    margin-left: 4rem;
-    padding-top: 3rem;
+    padding-top: 2rem;
     font-size: 2rem;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+    -webkit-text-stroke: 1px black;
+}
+
+.about__content-text{
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+
+    font-size: 1.2rem;
+    ul{
+        list-style: none;
+    }
 }
