--- a/src/styles/components/skillset.scss
+++ b/src/styles/components/skillset.scss
@@ -5,15 +5,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    &::before{
+    &::after{
         content: "SKILLS";
         font-size: 15rem;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: -1;
-        opacity: 0.2;
+        opacity: 0.5;
         color: #ffffff;
         text-shadow: 3px 2px 3px black;
     }
