--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -22,6 +22,7 @@
     justify-content: space-between;
     flex-direction: column;
     text-align: center;
+    padding-bottom: 50px;
 }
 
 .about__content-title{
@@ -34,9 +35,12 @@
 
 .about__content-text{
     width: 400px;
+    height: 90vh;
     margin: 0 auto;
     text-align: center;
-
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     font-size: 1.2rem;
     ul{
         list-style: none;
