--- a/src/styles/components/skillset.scss
+++ b/src/styles/components/skillset.scss
@@ -1,3 +1,16 @@
+// ANIMATIONS
+
+@keyframes displayIn {
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+// SKILL SET STYLES
+
 .skillSet{
     width: 100%;
     min-height: 100vh;
@@ -35,6 +48,10 @@
             color: black;
         }
 
+        &:hover .skillSet__box-list__title::after{
+            animation: displayIn .5s ease forwards;
+        }
+
         &:hover{
             transform: translateY(-20px);
         }
@@ -45,7 +62,17 @@
     font-size: 2rem;
     color: white;
     -webkit-text-stroke: 1px black;
-    transition: color .3s ease-in;
+    position: relative;
+    transition: .4s ease-in-out;
+    &::after{
+        content: '';
+        width: 100%;
+        height: 2px;
+        display: block;
+        background-color: black;
+        transform: scale(0);
+        margin: auto;
+    }
 }
 
 .skilSet__box-list__content{
