--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -1,3 +1,9 @@
+// IMPORTS
+
+@import "./variables.scss";
+
+// ABOUT STYLES
+
 .about{
     width: 100%;
     min-height: 100vh;
@@ -11,8 +17,8 @@
         transform: translate(-50%, -50%);
         z-index: -1;
         opacity: 0.5;
-        color: #ffffff;
-        text-shadow: 3px 2px 3px black;
+        color: $baseColor;
+        text-shadow: 3px 2px 3px $secondColor;
     }
 }
 
@@ -28,9 +34,9 @@
 .about__content-title{
     padding-top: 2rem;
     font-size: 2rem;
-    color: white;
-    text-shadow: 1px 1px 2px black;
-    -webkit-text-stroke: 1px black;
+    color: $baseColor;
+    text-shadow: 1px 1px 2px $secondColor;
+    -webkit-text-stroke: 1px $secondColor;
 }
 
 .about__content-text{
