--- a/src/styles/components/jumbo.scss
+++ b/src/styles/components/jumbo.scss
@@ -1,3 +1,9 @@
+// IMPORTS
+
+@import "./variables.scss";
+
+// JUMBO STYLES
+
 .jumbotron{
     width: 100%;
     min-height: 100vh;
@@ -9,13 +15,13 @@
 
 .jumbotron__title{
     margin-left: 3rem;
-    color: white;
+    color: $baseColor;
     h1{
         font-size: 4rem;
-        -webkit-text-stroke: 2px black;
+        -webkit-text-stroke: 2px $secondColor;
     }
     h2{
         font-size: 2rem;
-        -webkit-text-stroke: 1px black;
+        -webkit-text-stroke: 1px $secondColor;
     }
 }
