--- a/src/styles/components/skillset.scss
+++ b/src/styles/components/skillset.scss
@@ -1,3 +1,7 @@
+// IMPORTS
+
+@import "./variables.scss";
+
 // ANIMATIONS
 
 @keyframes displayIn {
@@ -26,8 +30,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         opacity: 0.5;
-        color: #ffffff;
-        text-shadow: 3px 2px 3px black;
+        color: $baseColor;
+        text-shadow: 3px 2px 3px $secondColor;
     }
 }
 
@@ -40,12 +44,12 @@
         text-align: center;
         transition: .2s ease;
         &:hover  .skilSet__box-list__content{
-            color: black;
+            color: $secondColor;
             opacity: 1;
         }
 
         &:hover .skillSet__box-list__title{
-            color: black;
+            color: $secondColor;
         }
 
         &:hover .skillSet__box-list__title::after{
@@ -60,8 +64,8 @@
 
 .skillSet__box-list__title{
     font-size: 2rem;
-    color: white;
-    -webkit-text-stroke: 1px black;
+    color: $baseColor;
+    -webkit-text-stroke: 1px $secondColor;
     position: relative;
     transition: .4s ease-in-out;
     &::after{
@@ -69,7 +73,7 @@
         width: 100%;
         height: 2px;
         display: block;
-        background-color: black;
+        background-color: $secondColor;
         transform: scale(0);
         margin: auto;
     }
