--- a/src/styles/components/variables.scss
+++ b/src/styles/components/variables.scss
@@ -1,2 +1,3 @@
 $baseColor: #ffffff;
 $secondColor: #000000;
+$stroke: -1px -1px 0 $secondColor, 1px -1px 0 $secondColor, -1px 1px 0 $secondColor, 1px 1px 0 $secondColor;
