--- a/src/styles/components/projects.scss
+++ b/src/styles/components/projects.scss
@@ -2,7 +2,7 @@
 
 @import "../variables.scss";
 @import "../animations/appearText.scss";
-@import "../animations//appearSlide.scss";
+@import "../animations/appearSlide.scss";
 
 // PROJECTS STYLES
 
