--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -11,9 +11,9 @@
     position: relative;
     transition: opacity .3s ease-in;
     opacity: 0;
-    &::before{
+    &::after{
         content: "ABOUT";
-        font-size: 15rem;
+        font-size: 13rem;
         text-shadow: 3px 2px 3px $secondColor;
         color: $baseColor;
         position: absolute;
@@ -52,5 +52,24 @@
     flex-direction: column;
     ul{
         list-style: none;
+    }
+}
+
+@media (max-width: 1100px){
+    .about {
+        &::after{
+            font-size: 8rem;
+        }
+    }
+}
+
+@media (max-width: 730px){
+    .about {
+        &::after{
+            font-size: 4rem;
+        }
+    }
+    .about__content-text{
+        width: auto;
     }
 }
