--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -11,10 +11,10 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    transition: opacity .3s ease-in;
-    &::before{
+    transition: opacity .5s ease-in;
+    &::after{
         content: "CONTACT";
-        font-size: 15rem;
+        font-size: 13rem;
         text-shadow: 3px 2px 3px $secondColor;
         color: $baseColor;
         position: absolute;
@@ -40,16 +40,17 @@ footer {
 .footer__social-list{
     list-style-type: none;
     li{
-        font-size: 2rem;
         padding: 30px;
-        p{
-            display: inline;
-            margin-left: 15px;
-            color: $baseColor;
-            text-shadow: $stroke;
-            opacity: 0;
-        }
     }
+}
+
+.footer__social-list-info{
+    display: inline;
+    margin-left: 15px;
+    color: $baseColor;
+    text-shadow: $stroke;
+    opacity: 0;
+    font-size: 2rem;
 }
 
 .footer__social-list-icon{
@@ -65,5 +66,36 @@ footer {
     }
     &:hover{
         color: darken($baseColor, 20%);
+    }
+}
+
+.footer__info{
+    p{
+        margin: 15px 0;
+    }
+}
+
+@media (max-width: 1100px){
+    footer {
+        &::after{
+            font-size: 8rem;
+        }
+    }
+}
+
+@media (max-width: 730px){
+    footer{
+        &::after{
+            font-size: 4rem;
+        }
+    }
+    .footer__social-list-info{
+        opacity: 1;
+    }
+}
+
+@media (max-width: 560px){
+    .footer__social-list-info{
+        font-size: 1.5rem;
     }
 }
