--- a/src/styles/components/skillset.scss
+++ b/src/styles/components/skillset.scss
@@ -1,17 +1,7 @@
 // IMPORTS
 
 @import "../variables.scss";
-
-// ANIMATIONS
-
-@keyframes displayIn {
-    0%{
-        transform: scale(0);
-    }
-    100%{
-        transform: scale(1);
-    }
-}
+@import "../animations/displayIn.scss";
 
 // SKILL SET STYLES
 
@@ -24,7 +14,7 @@
     justify-content: space-between;
     &::after{
         content: "SKILLS";
-        font-size: 15rem;
+        font-size: 13rem;
         text-shadow: 3px 2px 3px $secondColor;
         color: $baseColor;
         position: absolute;
@@ -41,6 +31,7 @@
     flex-direction: row;
     list-style-type: none;
     justify-content: space-around;
+    flex-wrap: wrap;
     li{
         text-align: center;
         transition: .2s ease;
@@ -83,7 +74,32 @@
 .skilSet__box-list__content{
     width: 130px;
     margin: auto;
-    margin-top: 5px;
     opacity: 0;
     transition: opacity .3s ease-in;
+    margin-top: 5px;
+}
+
+@media (max-width: 1100px){
+    .skillSet {
+        &::after{
+            font-size: 8rem;
+        }
+    }
+}
+
+
+@media (max-width: 730px){
+    .skillSet {
+        &::after{
+            font-size: 4rem;
+        }
+    }
+    .skilSet__box-list__content{
+        opacity: 1;
+    }
+    .skillSet__box-list {
+        li{
+            margin-bottom: 70px;
+        }
+    }
 }
