--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,8 @@ body{
     padding: 0;
     overflow-x: hidden;
 }
-*{
-    font-family: sans-serif;
+html{
+    font-family: 'Rubik', sans-serif;
 }
 
 ul{
