--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -45,7 +45,7 @@
     width: 400px;
     height: 90vh;
     font-size: 1.2rem;
-    margin: 0 auto;
+    margin: 10px auto;
     display: flex;
     text-align: center;
     justify-content: space-between;
