Add: New project Remove: Old projects

--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -4,72 +4,71 @@
 
 // ABOUT STYLES
 
-
-.about{
-    width: 100%;
-    min-height: 100vh;
-    position: relative;
-    transition: opacity .3s ease-in;
-    opacity: 0;
-    &::after{
-        content: "ABOUT";
-        font-size: 13rem;
-        text-shadow: 3px 2px 3px $secondColor;
-        color: $baseColor;
-        position: absolute;
-        opacity: 0.5;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: -1;
-    }
-}
-
-.about__content{
-    min-height: 100vh;
-    padding-bottom: 50px;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.about__content-title{
-    padding-top: 2rem;
-    font-size: 2rem;
+.about {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  transition: opacity 0.3s ease-in;
+  opacity: 0;
+  &::after {
+    content: "ABOUT";
+    font-size: 13rem;
+    text-shadow: 3px 2px 3px $secondColor;
     color: $baseColor;
-    text-shadow: $stroke;
+    position: absolute;
+    opacity: 0.5;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
 }
 
-.about__content-text{
-    width: 400px;
-    height: 90vh;
-    font-size: 1.2rem;
-    margin: 10px auto;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    flex-direction: column;
-    ul{
-        list-style: none;
-    }
+.about__content {
+  min-height: 100vh;
+  padding-bottom: 50px;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-@media (max-width: 1100px){
-    .about {
-        &::after{
-            font-size: 8rem;
-        }
-    }
+.about__content-title {
+  padding-top: 2rem;
+  font-size: 2rem;
+  color: $baseColor;
+  text-shadow: $stroke;
 }
 
-@media (max-width: 730px){
-    .about {
-        &::after{
-            font-size: 4rem;
-        }
+.about__content-text {
+  width: 400px;
+  height: 90vh;
+  font-size: 1.2rem;
+  margin: 10px auto;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  flex-direction: column;
+  ul {
+    list-style: none;
+  }
+}
+
+@media (max-width: 1100px) {
+  .about {
+    &::after {
+      font-size: 8rem;
     }
-    .about__content-text{
-        width: auto;
+  }
+}
+
+@media (max-width: 730px) {
+  .about {
+    &::after {
+      font-size: 4rem;
     }
+  }
+  .about__content-text {
+    width: auto;
+  }
 }
